# container-structure-test

./: .gcloudignore  .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .travis.yaml  .travis.yml  BUILD  BUILD.bazel  CHANGELOG.md  CODEOWNERS  CONTRIBUTING  Dockerfile  Gopkg.toml  MODULE.bazel  Makefile  README.md  RELEASING.md  WORKSPACE  build.sh  cloudbuild.yaml  cloudbuild.yaml.in  command_test_v0.go  command_test_v1.go  defs.bzl  ext_run.sh  file_content_test_v0.go  file_content_test_v1.go  file_existence_test_v0.go  file_existence_test_v1.go  go.mod  go.sum  licenses_test.go  licenses_test_v0.go  main.go  release_cloudbuild.yaml  repositories.bzl  run.sh  structure_test.go  structure_test_v0.go  (+4 more)
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: bazel.yaml  build.yml  ci.bazelrc  codeql-analysis.yml  integration-tests.yml  labels.yml  release.yml
Godeps/: Godeps.json
bazel/: BUILD.bazel  container_structure_test.bzl  toolchain.bzl  toolchains_repo.bzl
bazel/docs/: BUILD.bazel  defs.md
bazel/test/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  tarball.tar  test.yaml
cmd/: BUILD.bazel  root.go  test.go  version.go
cmd/container-structure-test/: BUILD.bazel  container-structure-test.go
cmd/container-structure-test/app/: BUILD.bazel  container-structure-test.go
cmd/container-structure-test/app/cmd/: BUILD.bazel  cmd.go  test.go  test_test.go  version.go
cmd/container-structure-test/app/cmd/test/: BUILD.bazel  util.go
cmd/container-structure-test/app/flags/: BUILD.bazel  template.go
deploy/: Dockerfile  Dockerfile.build  Dockerfile_debug  cloudbuild.yaml  release.sh  release_cloudbuild.yaml
drivers/: BUILD.bazel  docker_driver.go  driver.go  host_driver.go  tar_driver.go
hack/: .gofmt.sh  checksums.sh  run.sh
internal/pkgutil/: BUILD.bazel  README.md  fs_utils.go  image_utils.go  tar_utils.go  transport_builder.go
pkg/color/: BUILD.bazel  formatter.go  formatter_test.go
pkg/config/: BUILD.bazel  options.go
pkg/drivers/: BUILD.bazel  docker_driver.go  driver.go  host_driver.go  options.go  tar_driver.go
pkg/output/: BUILD.bazel  output.go  output_test.go  output_utils.go  template.go
pkg/types/: BUILD.bazel  types.go
pkg/types/unversioned/: BUILD.bazel  types.go
pkg/types/v1/: BUILD.bazel  command.go  file_content.go  file_existence.go  licenses.go  structure.go
pkg/types/v2/: BUILD.bazel  command.go  file_content.go  file_existence.go  licenses.go  metadata.go  structure.go
pkg/utils/: BUILD.bazel  utils.go
pkg/version/: BUILD.bazel  version.go
tests/: .gitignore  BUILD.bazel  Dockerfile  Dockerfile.cap  Dockerfile.metadata  Dockerfile.unprivileged  cloudbuild.yaml.in  container_structure_report_generation_test.go  debian_failure_test.json  debian_failure_test.yaml  debian_metadata_test.yaml  debian_test.json  debian_test.yaml  envfile  structure_test_test.json  structure_test_tests.sh
tests/amd64/: fluent_bit_test.yaml  ubuntu_20_04_failure_test.yaml  ubuntu_20_04_test.yaml
tests/arm64/: fluent_bit_test.yaml  ubuntu_22_04_containeropts_test.yaml  ubuntu_22_04_containeropts_user_test.yaml
tests/ppc64le/: ubuntu_20_04_failure_test.yaml  ubuntu_20_04_metadata_env_test.yaml  ubuntu_20_04_metadata_failure_test.yaml  ubuntu_20_04_metadata_test.yaml  ubuntu_22_04_test.yaml
tests/s390x/: ubuntu_20_04_containeropts_env_test.yaml  ubuntu_20_04_containeropts_envfile_test.yaml  ubuntu_22_04_containeropts_test.yaml  ubuntu_22_04_metadata_test.yaml
testutil/: BUILD.bazel  util.go
types/unversioned/: BUILD.bazel  types.go
types/v1/: BUILD.bazel  command.go  file_content.go  file_existence.go  licenses.go  structure.go
types/v2/: BUILD.bazel  command.go  file_content.go  file_existence.go  licenses.go  metadata.go  structure.go
utils/: BUILD.bazel  utils.go
