load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_prefix")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

licenses(["notice"])

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    build_tags = ["go1.7"],
    external = "vendored",
    prefix = "github.com/GoogleCloudPlatform/container-structure-test",
)

sh_binary(
    name = "ext_run",
    srcs = ["ext_run.sh"],
)

go_binary(
    name = "structure_test",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/container-structure-test",
    pure = "on",
    deps = [
        "//cmd:go_default_library",
        "//pkg/drivers:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/github.com/fsouza/go-dockerclient:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)

container_image(
    name = "structure_test_image",
    base = "@distroless_base//image",
    entrypoint = ["/structure_test"],
    files = [":structure_test"],
)

go_prefix("github.com/GoogleCloudPlatform/container-structure-test")

go_binary(
    name = "container-structure-test",
    embed = [":go_default_library"],
    importpath = "github.com/GoogleCloudPlatform/container-structure-test",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/container-structure-test",
    deps = [
        "//cmd:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
