"Bazel module definition, see https://bazel.build/external/overview#bzlmod"

module(
    name = "container_structure_test",
    # Replaced dynamically when published
    version = "0.0.0",
    compatibility_level = 1,
)

# To run jq
bazel_dep(name = "aspect_bazel_lib", version = "1.28.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")

ext = use_extension("//:repositories.bzl", "extension")
use_repo(
    ext,
    "structure_test_toolchains",
    # For testing only
    "structure_test_st_darwin_amd64",
    "structure_test_st_darwin_arm64",
    "structure_test_st_linux_amd64",
    "structure_test_st_linux_arm64",
    "structure_test_st_linux_s390x",
    "structure_test_st_windows_amd64",
)

register_toolchains("@structure_test_toolchains//:all")

bazel_dep(name = "stardoc", version = "0.7.1", dev_dependency = True, repo_name = "io_bazel_stardoc")

bazel_dep(
    name = "rules_go",
    version = "0.50.1",
)

bazel_dep(name = "gazelle", version = "0.42.0", dev_dependency = True)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_fsouza_go_dockerclient",
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "com_github_joho_godotenv",
    "com_github_moby_sys_sequential",
    "com_github_opencontainers_image_spec",
    "com_github_pkg_errors",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "in_gopkg_yaml_v2",
    "org_golang_x_crypto",
)
