load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "test.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-structure-test/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/drivers:go_default_library",
        "//pkg/output:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/types/unversioned:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/github.com/GoogleCloudPlatform/runtimes-common/ctc_lib:go_default_library",
        "//vendor/github.com/GoogleCloudPlatform/runtimes-common/ctc_lib/flags:go_default_library",
        "//vendor/github.com/fsouza/go-dockerclient:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
