load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "docker_driver.go",
        "driver.go",
        "tar_driver.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-structure-test/drivers",
    visibility = ["//visibility:public"],
    deps = [
        "//types/unversioned:go_default_library",
        "//vendor/github.com/GoogleCloudPlatform/container-diff/pkg/util:go_default_library",
        "//vendor/github.com/fsouza/go-dockerclient:go_default_library",
    ],
)
