load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["container_structure_report_generation_test.go"],
    importpath = "github.com/GoogleContainerTools/container-structure-test/tests",
    deps = [
        "//cmd:go_default_library",
        "//pkg/types/unversioned:go_default_library",
        "//vendor/github.com/GoogleCloudPlatform/runtimes-common/ctc_lib:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
