load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pkgutil",
    srcs = [
        "fs_utils.go",
        "image_utils.go",
        "tar_utils.go",
        "transport_builder.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-structure-test/internal/pkgutil",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_google_go_containerregistry//pkg/authn:go_default_library",
        "@com_github_google_go_containerregistry//pkg/name:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/daemon:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/mutate:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/remote:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/tarball:go_default_library",
        "@com_github_moby_sys_sequential//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
