load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "docker_driver.go",
        "driver.go",
        "host_driver.go",
        "tar_driver.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-structure-test/pkg/drivers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/types/unversioned:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/github.com/GoogleContainerTools/container-diff/pkg/util:go_default_library",
        "//vendor/github.com/GoogleCloudPlatform/runtimes-common/ctc_lib:go_default_library",
        "//vendor/github.com/fsouza/go-dockerclient:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
