load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "drivers",
    srcs = [
        "docker_driver.go",
        "driver.go",
        "host_driver.go",
        "tar_driver.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-structure-test/pkg/drivers",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/pkgutil",
        "//pkg/types/unversioned",
        "//pkg/utils",
        "@com_github_fsouza_go_dockerclient//:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/mutate:go_default_library",
        "@com_github_joho_godotenv//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
