load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["output.go", "output_utils.go"],
    importpath = "github.com/GoogleCloudPlatform/container-structure-test/pkg/output",
    visibility = ["//visibility:public"],
    deps = ["//pkg/types/unversioned:go_default_library"],
)
