load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["utils.go"],
    importpath = "github.com/GoogleContainerTools/container-structure-test/pkg/utils",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/GoogleCloudPlatform/runtimes-common/ctc_lib:go_default_library"],
)
