load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "file_content.go",
        "file_existence.go",
        "licenses.go",
        "structure.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-structure-test/types/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//drivers:go_default_library",
        "//types/unversioned:go_default_library",
        "//utils:go_default_library",
    ],
)
