load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "file_content.go",
        "file_existence.go",
        "licenses.go",
        "structure.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/container-structure-test/pkg/types/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/drivers:go_default_library",
        "//pkg/types/unversioned:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/github.com/GoogleCloudPlatform/runtimes-common/ctc_lib:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
