load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1",
    srcs = [
        "command.go",
        "file_content.go",
        "file_existence.go",
        "licenses.go",
        "structure.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-structure-test/pkg/types/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/drivers",
        "//pkg/types/unversioned",
        "//pkg/utils",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
