load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "file_content.go",
        "file_existence.go",
        "licenses.go",
        "metadata.go",
        "structure.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-structure-test/pkg/types/v2",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/drivers:go_default_library",
        "//pkg/output:go_default_library",        
        "//pkg/types/unversioned:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
