load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "types",
    srcs = [
        "command.go",
        "file_content.go",
        "file_existence.go",
        "licenses.go",
        "metadata.go",
        "structure.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-structure-test/pkg/types/v2",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/drivers",
        "//pkg/types/unversioned",
        "//pkg/utils",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
