load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "cmd.go",
        "test.go",
        "version.go",
    ],
    importpath = "github.com/GoogleContainerTools/container-structure-test/cmd/container-structure-test/app/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/container-structure-test/app/cmd/test",
        "//cmd/container-structure-test/app/flags",
        "//pkg/color",
        "//pkg/config",
        "//pkg/drivers",
        "//pkg/output",
        "//pkg/types/unversioned",
        "//pkg/utils",
        "//pkg/version",
        "@com_github_fsouza_go_dockerclient//:go_default_library",
        "@com_github_google_go_containerregistry//pkg/name:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/daemon:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/layout:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
